--- a/styles.css
+++ b/styles.css
@@ -459,6 +459,11 @@ select:focus-visible {
     max-width: 35%;
 }
 
+.link-row .link-icon-input {
+    max-width: 180px;
+    min-width: 140px;
+}
+
 .link-row select.link-type-select {
     width: 65px;
     flex: 0 0 auto;
